--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airsoft-joule-fps-calculator",
+  "name": "airsoft-joule-table",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,8 +15,16 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "next-client-cookies": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.7",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.1"
   }
 }
